@@ -8,32 +8,91 @@
         <version>[3,4)</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>net.fa.dispersion</groupId>
-    <artifactId>stateactorsystem</artifactId>
-    <version>DEVELOP-SNAPSHOT</version>
-    <name>State Actor System</name>
-    <description>Dispersion State Actor System</description>
+
+    <groupId>com.github.f442y</groupId>
+    <artifactId>dispersion</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <name>dispersion</name>
+    <description>Root of Dispersion Project</description>
+
+    <modules>
+        <module>core</module>
+        <module>samples</module>
+        <module>applications</module>
+        <module>service-interfaces</module>
+        <module>composer</module>
+    </modules>
+
     <properties>
         <java.version>21</java.version>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <!--    dependency versions    -->
+        <opentelemetry.bom.version>1.40.0</opentelemetry.bom.version>
+        <coherence.version>[24,)</coherence.version>
+        <fury.serializer.version>[0,1)</fury.serializer.version>
+        <gson.serializer.version>[2.10.1,)</gson.serializer.version>
+        <jox.channels.version>[0.3.0,)</jox.channels.version>
+        <fop.objectpool.version>[2.2.1,)</fop.objectpool.version>
     </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>io.opentelemetry</groupId>
+                <artifactId>opentelemetry-bom</artifactId>
+                <version>${opentelemetry.bom.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.softwaremill.jox</groupId>
+                <artifactId>channels</artifactId>
+                <version>${jox.channels.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>cn.danielw</groupId>
+                <artifactId>fast-object-pool</artifactId>
+                <version>${fop.objectpool.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.fury</groupId>
+                <artifactId>fury-core</artifactId>
+                <version>${fury.serializer.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>${gson.serializer.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.oracle.coherence.spring</groupId>
+                <artifactId>coherence-spring-boot-starter</artifactId>
+                <version>[3,4)</version>
+            </dependency>
+            <dependency>
+                <groupId>com.oracle.coherence.ce</groupId>
+                <artifactId>coherence</artifactId>
+                <version>${coherence.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-aop</artifactId>
-        </dependency>
-
         <!--        <dependency>-->
         <!--            <groupId>org.springframework.boot</groupId>-->
-        <!--            <artifactId>spring-boot-starter-web</artifactId>-->
+        <!--            <artifactId>spring-boot-starter-artemis</artifactId>-->
         <!--        </dependency>-->
         <!--        <dependency>-->
-        <!--            <groupId>org.springframework.boot</groupId>-->
-        <!--            <artifactId>spring-boot-starter-websocket</artifactId>-->
+        <!--            <groupId>org.apache.activemq</groupId>-->
+        <!--            <artifactId>artemis-jakarta-client</artifactId>-->
         <!--        </dependency>-->
 
         <!--        <dependency>-->
@@ -42,35 +101,21 @@
         <!--        </dependency>-->
 
         <!--        <dependency>-->
-        <!--            <groupId>io.micrometer</groupId>-->
-        <!--            <artifactId>micrometer-tracing</artifactId>-->
-        <!--        </dependency>-->
-        <!--        <dependency>-->
-        <!--            <groupId>io.micrometer</groupId>-->
-        <!--            <artifactId>micrometer-tracing-bridge-brave</artifactId>-->
-        <!--        </dependency>-->
-        <!--        <dependency>-->
-        <!--            <groupId>io.opentelemetry</groupId>-->
-        <!--            <artifactId>opentelemetry-exporter-otlp</artifactId>-->
+        <!--            <groupId>org.springframework.boot</groupId>-->
+        <!--            <artifactId>spring-boot-devtools</artifactId>-->
+        <!--            <scope>runtime</scope>-->
+        <!--            <optional>true</optional>-->
         <!--        </dependency>-->
 
         <!--        <dependency>-->
         <!--            <groupId>org.springframework.boot</groupId>-->
-        <!--            <artifactId>spring-boot-starter-artemis</artifactId>-->
-        <!--        </dependency>-->
-        <!--        <dependency>-->
-        <!--            <groupId>org.apache.activemq</groupId>-->
-        <!--            <artifactId>artemis-jakarta-server</artifactId>-->
-        <!--        </dependency>-->
-        <!--        <dependency>-->
-        <!--            <groupId>org.apache.activemq</groupId>-->
-        <!--            <artifactId>artemis-jakarta-client</artifactId>-->
+        <!--            <artifactId>spring-boot-starter-web</artifactId>-->
         <!--        </dependency>-->
 
-        <dependency>
-            <groupId>org.springframework.kafka</groupId>
-            <artifactId>spring-kafka</artifactId>
-        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>org.springframework.boot</groupId>-->
+        <!--            <artifactId>spring-boot-starter-aop</artifactId>-->
+        <!--        </dependency>-->
 
         <!--        <dependency>-->
         <!--            <groupId>org.springframework.boot</groupId>-->
@@ -84,12 +129,10 @@
         <!--        <dependency>-->
         <!--            <groupId>com.oracle.coherence.spring</groupId>-->
         <!--            <artifactId>coherence-spring-boot-starter</artifactId>-->
-        <!--            <version>[3,4)</version>-->
         <!--        </dependency>-->
         <!--        <dependency>-->
         <!--            <groupId>com.oracle.coherence.ce</groupId>-->
         <!--            <artifactId>coherence</artifactId>-->
-        <!--            <version>[21,)</version>-->
         <!--        </dependency>-->
 
         <!--        <dependency>-->
@@ -98,16 +141,44 @@
         <!--        </dependency>-->
 
         <!--        <dependency>-->
-        <!--            <groupId>com.oracle.database.jdbc</groupId>-->
-        <!--            <artifactId>ojdbc8</artifactId>-->
-        <!--            <scope>runtime</scope>-->
+        <!--            <groupId>org.apache.commons</groupId>-->
+        <!--            <artifactId>commons-collections4</artifactId>-->
+        <!--            <version>[4.4,)</version>-->
+        <!--            <optional>true</optional>-->
         <!--        </dependency>-->
 
-        <dependency>
-            <groupId>org.furyio</groupId>
-            <artifactId>fury-core</artifactId>
-            <version>[0,1]</version>
-        </dependency>
+
+        <!--        <dependency>-->
+        <!--            <groupId>io.opentelemetry</groupId>-->
+        <!--            <artifactId>opentelemetry-api</artifactId>-->
+        <!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>io.opentelemetry</groupId>-->
+        <!--            <artifactId>opentelemetry-sdk</artifactId>-->
+        <!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>io.opentelemetry</groupId>-->
+        <!--            <artifactId>opentelemetry-exporter-logging</artifactId>-->
+        <!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            &lt;!&ndash; Not managed by opentelemetry-bom &ndash;&gt;-->
+        <!--            <groupId>io.opentelemetry.semconv</groupId>-->
+        <!--            <artifactId>opentelemetry-semconv</artifactId>-->
+        <!--            <version>[1.26.0-alpha,)</version>-->
+        <!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>io.opentelemetry</groupId>-->
+        <!--            <artifactId>opentelemetry-sdk-extension-autoconfigure</artifactId>-->
+        <!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>io.opentelemetry</groupId>-->
+        <!--            <artifactId>opentelemetry-sdk-extension-autoconfigure-spi</artifactId>-->
+        <!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>io.opentelemetry.instrumentation</groupId>-->
+        <!--            <artifactId>opentelemetry-logback-appender-1.0</artifactId>-->
+        <!--            <version>2.6.0-alpha</version>-->
+        <!--        </dependency>-->
 
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -115,39 +186,34 @@
             <optional>true</optional>
         </dependency>
 
+        <!--        <dependency>-->
+        <!--            <groupId>org.springframework.kafka</groupId>-->
+        <!--            <artifactId>spring-kafka-test</artifactId>-->
+        <!--            <scope>test</scope>-->
+        <!--        </dependency>-->
+
+        <!--        <dependency>-->
+        <!--            <groupId>org.apache.activemq</groupId>-->
+        <!--            <artifactId>artemis-jakarta-server</artifactId>-->
+        <!--            <scope>test</scope>-->
+        <!--        </dependency>-->
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
-        <dependency>
-            <groupId>org.springframework.kafka</groupId>
-            <artifactId>spring-kafka-test</artifactId>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
+
 
     <build>
         <plugins>
             <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <excludes>
-                        <exclude>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                        </exclude>
-                    </excludes>
-                </configuration>
-            </plugin>
-
-            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <source>21</source>
+                    <target>21</target>
                 </configuration>
             </plugin>
 
@@ -155,7 +221,8 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <excludedGroups>LongRunningTests</excludedGroups>
-                    <argLine>--enable-preview</argLine>
+                    <!--                    <argLine>&#45;&#45;enable-preview</argLine>-->
+                    <!--                    <argLine>-Xms250m -Xmx300m</argLine>-->
                 </configuration>
             </plugin>
 
@@ -177,32 +244,6 @@
             <!--                        <phase>validate</phase>-->
             <!--                        <goals>-->
             <!--                            <goal>check</goal>-->
-            <!--                        </goals>-->
-            <!--                    </execution>-->
-            <!--                </executions>-->
-            <!--            </plugin>-->
-
-
-            <!--            <plugin>-->
-            <!--                <groupId>org.apache.maven.plugins</groupId>-->
-            <!--                <artifactId>maven-assembly-plugin</artifactId>-->
-            <!--                <configuration>-->
-            <!--                    <descriptorRefs>-->
-            <!--                        <descriptorRef>jar-with-dependencies</descriptorRef>-->
-            <!--                    </descriptorRefs>-->
-            <!--                    <archive>-->
-            <!--                        <manifest>-->
-            <!--                            <addClasspath>true</addClasspath>-->
-            <!--                            <mainClass>net.fa.dispersion.stateactorsystem.StateActorSystemApplication</mainClass>-->
-            <!--                        </manifest>-->
-            <!--                    </archive>-->
-            <!--                </configuration>-->
-            <!--                <executions>-->
-            <!--                    <execution>-->
-            <!--                        <id>assemble-all</id>-->
-            <!--                        <phase>package</phase>-->
-            <!--                        <goals>-->
-            <!--                            <goal>single</goal>-->
             <!--                        </goals>-->
             <!--                    </execution>-->
             <!--                </executions>-->
